# meta

./: .gitignore  AGENTS.md  BRAINSTORM.md  CLAUDE.md  CODEOWNERS  DESIGN.md  DESIGN_REVIEW.md  GEMINI.md  README.md  ux-diagnosis-report.md
.githooks/: commit-msg  pre-push
.stibdedlom/: invocation-policy.yaml  manifest.yaml
capabilities/aura-export.backup-20260628-101052/: README.md  install-skill.sh  pyproject.toml
capabilities/aura-export.backup-20260628-101052/schemas/: provenance-bundle.schema.json
capabilities/aura-export.backup-20260628-101052/src/aura_export/: __init__.py  capture.py  cli.py  provenance.py  review.py  sanitize.py  utils.py
capabilities/aura-export.backup-20260628-101052/tests/: test_router_submit.py
docs/: agent-routing.md  article-simplicity-review-2026-07.md  autonomy-policy.md  derivative-format-contract.md  garden-relationship.md  privacy-contract.md  sibling-agent-review.md  submission-guide.md
examples/: article-proposal-example.yaml  org-feedback-example.yaml
planning/: expanded-series-plan.md  research-intake.md  review-evidence-claims-expansion.md  review-evidence-claims.md  review-evidence.md  review-narrative-tone-expansion.md  review-narrative-tone.md  review-narrative.md  review-policy.md  review-privacy-policy-expansion.md  review-privacy-policy.md  review-visualizations-accessibility-expansion.md  review-visualizations-accessibility.md  review-visualizations.md  revised-series-plan-v2.md  revised-series-plan.md
proposals/: README.md
routing/: README.md  autonomy-policy.yaml
schemas/: derivative-format-contract.schema.json
scripts/: route-submission.py  (+1 more)
(+171 files in other folders)
