[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-export"
version = "0.1.0"
description = "Agent diagnostic skill for exporting sanitized findings from any project to aura-knowledge/meta."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Aura Knowledge Contributors" }
]
keywords = ["knowledge-garden", "agent", "privacy", "routing", "feedback"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # PyYAML is used for layered config files.
    "PyYAML>=6.0",
    # GitHub CLI (`gh`) is required at runtime and must be installed separately.
]

[project.optional-dependencies]
validate = [
    # Optional stricter schema validation.
    "jsonschema>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
aura-export = "aura_export.cli:main"

[project.urls]
Homepage = "https://github.com/aura-knowledge/meta"
Repository = "https://github.com/aura-knowledge/meta"
Documentation = "https://github.com/aura-knowledge/meta/blob/main/capabilities/aura-export/README.md"

[tool.setuptools.packages.find]
where = ["src"]
